{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 27,
  "lineage": "2d1b44b1-ac18-3463-4deb-de750a0af594",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:security-group/sg-062ed865483d64fac",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062ed865483d64fac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "230989884492",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:230989884492:instance/i-02fa680eecccc4708",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fa680eecccc4708",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0538f2c883f1a5ac6",
            "private_dns": "ip-10-20-20-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.14",
            "public_dns": "ec2-3-84-220-34.compute-1.amazonaws.com",
            "public_ip": "3.84.220.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ccc6eb1f1a7686e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f4ac4fbf11fe8bc",
            "tags": {
              "Name": "app-server-1"
            },
            "tags_all": {
              "Name": "app-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002247d1e0749c82c"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_instance",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:230989884492:instance/i-0c797e0cab14a74af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c797e0cab14a74af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-028b88abd245a1efe",
            "private_dns": "ip-10-20-20-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.26",
            "public_dns": "ec2-54-165-157-231.compute-1.amazonaws.com",
            "public_ip": "54.165.157.231",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04df3bb6783cc4536",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07685ad27db8f7558",
            "tags": {
              "Name": "app-server-2"
            },
            "tags_all": {
              "Name": "app-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002247d1e0749c82c"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_instance",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:230989884492:instance/i-0d4ba82024ce092b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4ba82024ce092b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-090648456016d1ee5",
            "private_dns": "ip-10-20-20-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.40",
            "public_dns": "ec2-54-92-191-85.compute-1.amazonaws.com",
            "public_ip": "54.92.191.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03aa65629ee357a3d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0064bd55a1edbec56",
            "tags": {
              "Name": "app-server-3"
            },
            "tags_all": {
              "Name": "app-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-002247d1e0749c82c"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_instance",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:internet-gateway/igw-066bc7c6ad1cfc884",
            "id": "igw-066bc7c6ad1cfc884",
            "owner_id": "230989884492",
            "tags": {
              "Name": "app-1-gateway"
            },
            "tags_all": {
              "Name": "app-1-gateway"
            },
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:230989884492:loadbalancer/app/front/1408ff01d3711d47",
            "arn_suffix": "app/front/1408ff01d3711d47",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-1491898596.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:230989884492:loadbalancer/app/front/1408ff01d3711d47",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front",
            "security_groups": [
              "sg-0796f0db5ce71843b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0064bd55a1edbec56"
              },
              {
                "subnet_id": "subnet-05f4ac4fbf11fe8bc"
              },
              {
                "subnet_id": "subnet-07685ad27db8f7558"
              }
            ],
            "subnets": [
              "subnet-0064bd55a1edbec56",
              "subnet-05f4ac4fbf11fe8bc",
              "subnet-07685ad27db8f7558"
            ],
            "tags": {
              "Environment": "front"
            },
            "tags_all": {
              "Environment": "front"
            },
            "vpc_id": "vpc-0dd9eb031c7ad1a77",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:230989884492:listener/app/front/1408ff01d3711d47/eec0a84c923e9289",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:230989884492:listener/app/front/1408ff01d3711d47/eec0a84c923e9289",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:230989884492:loadbalancer/app/front/1408ff01d3711d47",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front",
            "aws_lb_target_group.front",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093",
            "arn_suffix": "targetgroup/application-front/aaeb9a01e7fc3093",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "application-front",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093-20230804115403963800000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093",
            "target_id": "i-02fa680eecccc4708"
          },
          "dependencies": [
            "aws_instance.app-server",
            "aws_lb_target_group.front",
            "aws_security_group.ec2_instance",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093-20230804115404452200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093",
            "target_id": "i-0c797e0cab14a74af"
          },
          "dependencies": [
            "aws_instance.app-server",
            "aws_lb_target_group.front",
            "aws_security_group.ec2_instance",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093-20230804115404878800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:230989884492:targetgroup/application-front/aaeb9a01e7fc3093",
            "target_id": "i-0d4ba82024ce092b2"
          },
          "dependencies": [
            "aws_instance.app-server",
            "aws_lb_target_group.front",
            "aws_security_group.ec2_instance",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-066bc7c6ad1cfc884",
            "id": "r-rtb-06e46795383bb1d021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e46795383bb1d02",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this-igw",
            "aws_route_table.this-rt",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:route-table/rtb-06e46795383bb1d02",
            "id": "rtb-06e46795383bb1d02",
            "owner_id": "230989884492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066bc7c6ad1cfc884",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-1-route-table"
            },
            "tags_all": {
              "Name": "app-1-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039df1998d3c564db",
            "route_table_id": "rtb-06e46795383bb1d02",
            "subnet_id": "subnet-05f4ac4fbf11fe8bc"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0a10b38d6ed9b7e",
            "route_table_id": "rtb-06e46795383bb1d02",
            "subnet_id": "subnet-07685ad27db8f7558"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0939ce359af18512d",
            "route_table_id": "rtb-06e46795383bb1d02",
            "subnet_id": "subnet-0064bd55a1edbec56"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:security-group/sg-002247d1e0749c82c",
            "description": "Allow inbound and outbound traffic to EC2 instances from load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002247d1e0749c82c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0796f0db5ce71843b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "IN-SG",
            "name_prefix": "",
            "owner_id": "230989884492",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:security-group/sg-0796f0db5ce71843b",
            "description": "Allow inbound and outbound traffic to load balancer from the internet.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0796f0db5ce71843b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LB-SG",
            "name_prefix": "",
            "owner_id": "230989884492",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:subnet/subnet-05f4ac4fbf11fe8bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.20.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f4ac4fbf11fe8bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230989884492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-1-public-1"
            },
            "tags_all": {
              "Name": "app-1-public-1"
            },
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:subnet/subnet-07685ad27db8f7558",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.20.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07685ad27db8f7558",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230989884492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-1-public-2"
            },
            "tags_all": {
              "Name": "app-1-public-2"
            },
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:subnet/subnet-0064bd55a1edbec56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.20.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0064bd55a1edbec56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "230989884492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-1-public-3"
            },
            "tags_all": {
              "Name": "app-1-public-3"
            },
            "vpc_id": "vpc-0dd9eb031c7ad1a77"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230989884492:vpc/vpc-0dd9eb031c7ad1a77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.20.0/26",
            "default_network_acl_id": "acl-09d2ecb9d1edf91be",
            "default_route_table_id": "rtb-0954fba97e40a6d09",
            "default_security_group_id": "sg-062ed865483d64fac",
            "dhcp_options_id": "dopt-046b697eedb4f6472",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dd9eb031c7ad1a77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0954fba97e40a6d09",
            "owner_id": "230989884492",
            "tags": {
              "Name": "app-1"
            },
            "tags_all": {
              "Name": "app-1"
            }
          }
        }
      ]
    }
  ]
}